--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,8 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.15
+          # https://github.com/actions/setup-go/issues/326
+          go-version: '1.20'
 
       - name: Release Go binaries
         uses: goreleaser/goreleaser-action@v2
