--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,8 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    tags:
+      - "*"
 
 jobs:
   build-release:
@@ -20,7 +21,7 @@ jobs:
         uses: actions/setup-go@v2
         with:
           # https://github.com/actions/setup-go/issues/326
-          go-version: '1.20'
+          go-version: "1.20"
 
       - name: Release Go binaries
         uses: goreleaser/goreleaser-action@v2
