--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -41,16 +41,11 @@ changelog:
 
 brews:
   - name: lsn
-    url_template: "https://github.com/faizmokh/lsn/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
+    # goarm: 6
     folder: Formula
-    description: "A simple CLI tool to generate open source license"
-    license: "MIT"
-    commit_author:
-      name: faizmokh
-      email: mfmokhtar@gmail.com
-    homepage: https://github.com/faizmokh/homebrew-tap
     tap:
       owner: faizmokh
+      name: homebrew-tap
 # The lines beneath this are called `modelines`. See `:help modeline`
 # Feel free to remove those if you don't want/use them.
 # yaml-language-server: $schema=https://goreleaser.com/static/schema.json
